Updated structure of project
